--- a/GoogleSharePointMigrationAssistant/web/templates/index.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/index.html
@@ -1,12 +1,36 @@
-{% extends 'include/master.html' %}
-{% block content %}
-<div class="home container jumbotron w-75"
-    style="background-color: transparent; height: 70vh; align-items: center; display: flex; justify-content: center">
-    <div class="w-75 text-center">
-        <h1>Automate your data migration.</h1>
-        <p class="lead">Migrate your data from Google to SharePoint or OneDrive without depending on IT support.</p>
-        <button class="btn btn-lg btn-primary">Get Started</button>
-    </div>
+{% extends 'include/master.html' %} {% block content %}
+<div
+  class="home container jumbotron w-75"
+  style="
+    background-color: transparent;
+    height: 70vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  "
+>
+  <div class="w-75 text-center">
+    <h1>Automate your data migration.</h1>
+    <p class="lead">
+      Migrate your data from Google to SharePoint or OneDrive without depending
+      on IT support.
+    </p>
+    {% if user.is_authenticated %}
+    <a
+      class="btn btn-lg btn-primary"
+      href="{% url 'create-migration' %}"
+      title="Create a new migration"
+      >Get Started</a
+    >
+    {% else %}
+    <a
+      class="btn btn-lg btn-primary"
+      href="{% url 'login' %}"
+      title="Log in to get started"
+      >Get Started</a
+    >
+    {% endif %}
+  </div>
 </div>
 
 {% endblock %}
