--- a/GoogleSharePointMigrationAssistant/web/templates/index.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/index.html
@@ -10,11 +10,8 @@
   "
 >
   <div class="w-75 text-center">
-    <h1>Automate your data migration.</h1>
-    <p class="lead">
-      Migrate your data from Google to SharePoint or OneDrive without depending
-      on IT support.
-    </p>
+    <h1>Automate your own data migration.</h1>
+    <p class="lead">Migrate your data from Google to SharePoint or OneDrive.</p>
     {% if user.is_authenticated %}
     <a
       class="btn btn-lg btn-primary"
