--- a/GoogleSharePointMigrationAssistant/web/static/style/main.css
+++ b/GoogleSharePointMigrationAssistant/web/static/style/main.css
@@ -5,11 +5,13 @@ html,
 body {
   width: 100%;
   min-height: 100vh;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
 
 html {
   -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%;
+}
 
 body {
   font-family: "Raleway", sans-serif;
@@ -30,7 +32,8 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  text-decoration-skip: ink; }
+  text-decoration-skip: ink;
+}
 
 /**
      * Reset some basic elements
@@ -52,7 +55,8 @@ ol,
 ul,
 figure {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 /**
      * Set `margin-bottom` to maintain vertycal rhythm
@@ -70,14 +74,16 @@ ul,
 ol,
 dl,
 figure {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+}
 
 /**
      * Images
      */
 img {
   max-width: 100%;
-  vertical-align: middle; }
+  vertical-align: middle;
+}
 
 /**
      * Hyphenation and paragraph styles
@@ -85,39 +91,48 @@ img {
 p {
   -webkit-hyphens: auto;
   -ms-hyphens: auto;
-  hyphens: auto; }
+  hyphens: auto;
+}
 
 /**
      * Figures
      */
 figure > img {
-  display: block; }
+  display: block;
+}
 
 figcaption {
   margin-top: 0.5em;
   text-align: center;
-  font-size: 1.1em; }
+  font-size: 1.1em;
+}
 
 /**
      * Lists
      */
 ul,
 ol {
-  margin-left: 32px; }
+  margin-left: 32px;
+}
 
 li > ul,
 li > ol {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 ul.no-list {
-  margin-left: 0; }
-  ul.no-list li {
-    list-style: none; }
+  margin-left: 0;
+}
+ul.no-list li {
+  list-style: none;
+}
 
 a {
-  text-decoration: none; }
-  a:focus {
-    outline: none; }
+  text-decoration: none;
+}
+a:focus {
+  outline: none;
+}
 
 /**
      * Blockquotes
@@ -128,66 +143,84 @@ blockquote {
   padding-left: 16px;
   font-size: 18px;
   letter-spacing: -1px;
-  font-style: italic; }
-  blockquote > :last-child {
-    margin-bottom: 0; }
+  font-style: italic;
+}
+blockquote > :last-child {
+  margin-bottom: 0;
+}
 
 /**
      * Text styling
      */
 strong,
 b {
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 /**
      * Iframe
      */
 iframe {
   border: none;
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 /* Content */
 .lead {
   font-size: 1.3em;
-  text-shadow: 0px 0px 5px black, 0px 0px 10px black; }
+  font-weight: 400;
+}
 
 .colorbackground {
   background: linear-gradient(-45deg, #4285f4, #0f9d58, #f4b400, #db4437, #ffbb00, #00a1f1);
   background-size: 400% 400%;
-  animation: gradient 60s ease infinite; }
+  animation: gradient 60s ease infinite;
+}
 
 @keyframes gradient {
   0% {
-    background-position: 0% 50%; }
+    background-position: 0% 50%;
+  }
   50% {
-    background-position: 100% 50%; }
+    background-position: 100% 50%;
+  }
   100% {
-    background-position: 0% 50%; } }
+    background-position: 0% 50%;
+  }
+}
 footer {
   padding: 32px 0;
   font-size: 0.9em;
   box-shadow: 0 50vh 0 50vh #234;
   background-color: #234;
-  color: #e6e6e6; }
-  footer a {
-    color: #fff;
-    text-decoration: none; }
-    footer a:hover {
-      opacity: 0.8;
-      text-decoration: underline; }
-  footer .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: baseline;
-    justify-content: space-between; }
-  footer .footer-col {
-    padding: 16px 0; }
+  color: #e6e6e6;
+}
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+footer a:hover {
+  opacity: 0.8;
+  text-decoration: underline;
+}
+footer .container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: space-between;
+}
+footer .footer-col {
+  padding: 16px 0;
+}
+footer .site-desc {
+  width: 500px;
+}
+@media screen and (max-width: 800px) {
   footer .site-desc {
-    width: 500px; }
-    @media screen and (max-width: 800px) {
-      footer .site-desc {
-        flex: 1 100%; } }
+    flex: 1 100%;
+  }
+}
 
 /**
  * Layout classes
@@ -195,27 +228,34 @@ footer {
 .container {
   max-width: 1264px;
   margin: 0 auto;
-  padding: 0 32px; }
+  padding: 0 32px;
+}
 
 .page-main {
   display: flex;
   flex-direction: column;
-  flex-flow: initial; }
+  flex-flow: initial;
+}
 
 .page-content {
   padding-bottom: 3em;
-  flex: 1 1 auto; }
+  flex: 1 1 auto;
+}
 
 @media screen and (max-width: 600px) {
   .container {
     max-width: 1232px;
     margin: 0 auto;
-    padding: 0 16px; } }
+    padding: 0 16px;
+  }
+}
 .toasty-wrapper {
-  z-index: -1; }
+  z-index: -1;
+}
 
 .toasty-wrapper.activeToast {
-  z-index: 20; }
+  z-index: 20;
+}
 
 .loader_container_wrapper {
   width: 100%;
@@ -228,38 +268,46 @@ footer {
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center; }
-  .loader_container_wrapper .loader {
-    background: currentcolor;
-    position: relative;
-    animation: loading 1s ease-in-out infinite;
-    animation-delay: 0.4s;
-    width: 1rem;
-    height: 3rem;
-    margin: 0 1rem; }
-    .loader_container_wrapper .loader:after, .loader_container_wrapper .loader:before {
-      content: "";
-      position: absolute;
-      width: inherit;
-      height: inherit;
-      background: inherit;
-      animation: inherit; }
-    .loader_container_wrapper .loader:before {
-      right: 2rem;
-      animation-delay: 0.2s; }
-    .loader_container_wrapper .loader:after {
-      left: 2rem;
-      animation-delay: 0.6s; }
+  align-items: center;
+}
+.loader_container_wrapper .loader {
+  background: currentcolor;
+  position: relative;
+  animation: loading 1s ease-in-out infinite;
+  animation-delay: 0.4s;
+  width: 1rem;
+  height: 3rem;
+  margin: 0 1rem;
+}
+.loader_container_wrapper .loader:after, .loader_container_wrapper .loader:before {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background: inherit;
+  animation: inherit;
+}
+.loader_container_wrapper .loader:before {
+  right: 2rem;
+  animation-delay: 0.2s;
+}
+.loader_container_wrapper .loader:after {
+  left: 2rem;
+  animation-delay: 0.6s;
+}
 
 @keyframes loading {
-  0%,
-  100% {
-    box-shadow: 0 0 0 currentcolor, 0 0 0 currentcolor; }
+  0%, 100% {
+    box-shadow: 0 0 0 currentcolor, 0 0 0 currentcolor;
+  }
   50% {
-    box-shadow: 0 -0.25em 0 currentcolor, 0 0.25em 0 currentcolor; } }
+    box-shadow: 0 -0.25em 0 currentcolor, 0 0.25em 0 currentcolor;
+  }
+}
 .page-header {
   padding-top: 6px;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+}
 
 nav .site-title {
   font-weight: 500;
@@ -272,10 +320,12 @@ nav .site-title {
   border: none;
   text-shadow: 0px 0px 5px black, 0px 0px 10px black;
   color: #fff;
-  opacity: 1; }
-  nav .site-title:hover {
-    opacity: 0.75;
-    color: white;
-    transition: opacity 0.25s ease-in-out, border 0.25s ease-in-out; }
+  opacity: 1;
+}
+nav .site-title:hover {
+  opacity: 0.75;
+  color: white;
+  transition: opacity 0.25s ease-in-out, border 0.25s ease-in-out;
+}
 
 /*# sourceMappingURL=main.css.map */
