--- a/GoogleSharePointMigrationAssistant/web/templates/migrations/list.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/migrations/list.html
@@ -7,7 +7,7 @@
     {% endfor %} {% else %}
     <div class="col-sm-12 text-center">
       <p class="lead">
-        You currently do not have any active or queued data migrations
+        You currently do not have any active or queued data migrations.
       </p>
       <a
         href="{% url 'create-migration' %}"
