--- a/GoogleSharePointMigrationAssistant/web/templates/index.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/index.html
@@ -15,7 +15,7 @@
     {% if user.is_authenticated %}
     <a
       class="btn btn-lg btn-primary"
-      href="{% url 'create-migration' %}"
+      href="{% url 'setup' %}"
       title="Create a new migration"
       >Get Started</a
     >
