--- a/GoogleSharePointMigrationAssistant/web/templates/migrations/list.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/migrations/list.html
@@ -10,7 +10,7 @@
         You currently do not have any active or queued data migrations.
       </p>
       <a
-        href="{% url 'create-migration' %}"
+        href="{% url 'setup' %}"
         title="Create a new migration"
         class="btn btn-success"
       >
