--- a/GoogleSharePointMigrationAssistant/web/templates/auth/login.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/auth/login.html
@@ -26,6 +26,17 @@
                 Log in
               </button>
             </form>
+            <hr class="my-4" />
+            <div class="text-center">
+              <p>OR</p>
+              <a
+                href="{% url 'm365-single-sign-on' %}"
+                title="Log in with your Microsoft 365 account (single-sign-on)"
+                class="btn btn-md btn-outline-light btn-primary"
+                >Single Sign On (Log In With {{organization_name}}
+                Credentials)</a
+              >
+            </div>
           </div>
         </div>
       </div>
