update nav; fix syntax error; remove sample graph data; add sso to sign up;

--- a/GoogleSharePointMigrationAssistant/web/templates/auth/login.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/auth/login.html
@@ -2,7 +2,7 @@
 
 <div class="row justify-content-center">
   <div class="col-sm-8">
-    <div class="card mx-auto" style="width: 560px">
+    <div class="card mx-auto text-center" style="width: 560px">
       <div class="card-header">
         <h3 class="card-title text-dark">Log in</h3>
       </div>
