--- a/GoogleSharePointMigrationAssistant/web/templates/auth/signup.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/auth/signup.html
@@ -1,9 +1,11 @@
 {% extends 'include/master.html' %} {% block content %}
 <div class="row justify-content-center">
   <div class="col-sm-8">
-    <div class="col-md-6 card mx-auto" style="width: 560px">
+    <div class="col-md-6 card mx-auto text-center" style="width: 560px">
       <div class="card-header">
-        <h3 class="card-title text-dark">Sign up</h3>
+        <h3 class="card-title text-dark">
+          Create an Account to Migrate Your Data
+        </h3>
       </div>
       <div class="card-body">
         <div class="col-sm-12 login-form text-dark">
@@ -31,6 +33,17 @@
                 Sign Up
               </button>
             </form>
+            <hr class="my-4" />
+            <div class="text-center">
+              <p>OR</p>
+              <a
+                href="{% url 'm365-single-sign-on' %}"
+                title="Log in with your Microsoft 365 account (single-sign-on)"
+                class="btn btn-md btn-outline-light btn-primary"
+                >Single Sign On (Log In With {{organization_name}}
+                Credentials)</a
+              >
+            </div>
           </div>
         </div>
       </div>
