--- a/GoogleSharePointMigrationAssistant/web/templates/include/master.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/include/master.html
@@ -30,10 +30,13 @@
     <title>Google to SharePoint Migration Assistant</title>
 
     <!-- Bootstrap CSS -->
-    <script
-      src="https://kit.fontawesome.com/5d4efaa0a6.js"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
-    ></script>
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
