--- a/GoogleSharePointMigrationAssistant/web/templates/auth/login.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/auth/login.html
@@ -30,7 +30,7 @@
             <div class="text-center">
               <p>OR</p>
               <a
-                href="{% url 'm365-single-sign-on' %}"
+                href="{% url 'init-m365-auth' %}"
                 title="Log in with your Microsoft 365 account (single-sign-on)"
                 class="btn btn-md btn-outline-light btn-primary"
                 >Single Sign On (Log In With {{organization_name}}
