--- a/GoogleSharePointMigrationAssistant/web/static/style/main.scss
+++ b/GoogleSharePointMigrationAssistant/web/static/style/main.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 $base-font-family: "Raleway", sans-serif;
-$base-font-size: .85rem; // 16px by default
+$base-font-size: 1rem; // 16px by default
 $base-font-weight: 400;
 $bold-font-weight: 500;
 $small-font-size: 0.9em;
