--- a/GoogleSharePointMigrationAssistant/web/templates/destinations/sharepoint-sites.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/destinations/sharepoint-sites.html
@@ -1,4 +1,7 @@
+{% extends 'include/master.html' %}
+{% block content %}
 <div class="container">
 Please select the SharePoint Online site to which you would like to migrate your data. 
 </div>
 <!-- then select a document library -->
+{% endblock %}
