--- a/GoogleSharePointMigrationAssistant/web/static/style/_footer.scss
+++ b/GoogleSharePointMigrationAssistant/web/static/style/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   padding: $spacing-unit 0;
-
+  height: 10vh;
   font-size: $small-font-size;
   box-shadow: 0 50vh 0 50vh $footer-background;
 
