--- a/GoogleSharePointMigrationAssistant/web/templates/next-steps.html
+++ b/GoogleSharePointMigrationAssistant/web/templates/next-steps.html
@@ -1,5 +1,5 @@
 {% extends 'include/master.html' %} {% block content %}
-<div class="container pt-4">
+<div class="container pt-4 h-100">
     {% if step == 'google_login' %} 
       {% include 'include/steps/google_login.html' %} 
     {% elif step == 'm365_login' %}
