--- a/GoogleSharePointMigrationAssistant/web/static/style/main.css
+++ b/GoogleSharePointMigrationAssistant/web/static/style/main.css
@@ -4,8 +4,12 @@
 html,
 body {
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   scroll-behavior: smooth;
+}
+
+div.page-content {
+  height: 90vh;
 }
 
 html {
@@ -154,7 +158,7 @@ blockquote > :last-child {
      */
 strong,
 b {
-  font-weight: 500;
+  font-weight: 700;
 }
 
 /**
@@ -176,6 +180,15 @@ table.dataTable tbody th, table.dataTable tbody td {
   padding: 2px 2px;
 }
 
+a.show {
+  display: inline-block;
+  transition: 0.2s linear;
+}
+a.hide {
+  display: none;
+  transition: 0.2s linear;
+}
+
 .colorbackground {
   background: linear-gradient(-45deg, #4285f4, #0f9d58, #f4b400, #db4437, #ffbb00, #00a1f1);
   background-size: 400% 400%;
@@ -195,6 +208,7 @@ table.dataTable tbody th, table.dataTable tbody td {
 }
 footer {
   padding: 32px 0;
+  height: 10vh;
   font-size: 0.9em;
   box-shadow: 0 50vh 0 50vh #234;
   background-color: #234;
